--- a/packages.toml
+++ b/packages.toml
@@ -1,6 +1,6 @@
 [packages]
-nu_plugin_clipboard = "FMotalleb/nu_plugin_clipboard"
-nu_plugin_audio_hook = "FMotalleb/nu_plugin_audio_hook"
-nu_plugin_emoji = "fdncred/nu_plugin_emoji"
-nu_plugin_net = "fennewald/nu_plugin_net"
-nu_plugin_nupsql = "HertelP/nu_plugin_nupsql"
+nu_plugin_clipboard = "https://github.com/FMotalleb/nu_plugin_clipboard.git"
+nu_plugin_audio_hook = "https://github.com/FMotalleb/nu_plugin_audio_hook"
+nu_plugin_emoji = "https://github.com/fdncred/nu_plugin_emoji.git"
+nu_plugin_net = "https://github.com/fennewald/nu_plugin_net"
+nu_plugin_nupsql = "https://gitlab.com/HertelP/nu_plugin_nupsql.git"
