new 🌟: the nufmt and link scripts

--- a/packages.toml
+++ b/packages.toml
@@ -25,3 +25,7 @@ type = "cargo-git"
 [packages."bookmark_for_dir.nu"]
 repo = "https://github.com/yh17549/nu-dir-bookmark.git*bookmark_for_dir.nu"
 type = "git-script"
+
+[packages."nufmt.nu"]
+repo = "https://github.com/blindFS/topiary-nushell.git*nufmt.nu"
+type = "git-script"
