fix 🩹 (nupm): it's was write the packages info that has the rename option in wrong way in the 'packages.toml' file.

--- a/packages.toml
+++ b/packages.toml
@@ -27,5 +27,5 @@ repo = "https://github.com/yh17549/nu-dir-bookmark.git*bookmark_for_dir.nu"
 type = "git-script"
 
 [packages."nufmt.nu"]
-repo = "https://github.com/blindFS/topiary-nushell.git*nufmt.nu"
+repo = "https://github.com/blindFS/topiary-nushell.git*format.nu*nufmt.nu"
 type = "git-script"
