improve 🔥 (nupm): add new plugin `nutest`

--- a/packages.toml
+++ b/packages.toml
@@ -29,3 +29,7 @@ type = "git-script"
 [packages."nufmt.nu"]
 repo = "https://github.com/blindFS/topiary-nushell.git*format.nu*nufmt.nu"
 type = "git-script"
+
+[packages.nutest]
+repo = "https://github.com/vyadh/nutest.git*nutest"
+type = "git-module"
